--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
       ============ */
 
       .grid-item__author-name {
-        font-size: 1.3rem;
         font-weight: 500;
         line-height: 1em;
         margin-bottom: 0.4em;
@@ -65,10 +64,10 @@
       }
 
       .grid-item__quote {
-        font-size: 1.3rem;
         font-weight: 500;
         line-height: 1.385em;
         opacity: 0.7;
+        display: block;
       }
 
       /* =============
@@ -76,35 +75,78 @@
       ============ */
       main {
         display: grid;
+        width: 90%;
+        margin: 5% auto;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         row-gap: 2rem;
-        margin: 15% 5%;
       }
 
-      .grid-item__quote-img {
-        position: absolute;
-        right: 10%;
-        top: 0;
-        z-index: 0;
+      @media screen and (min-width: 556px) {
+        main {
+          grid-gap: 2rem;
+        }
+        .grid-item:nth-child(1),
+        .grid-item:nth-child(4),
+        .grid-item:nth-child(5) {
+          grid-column: auto/ span 2;
+        }
       }
 
-      .grid-item__author {
-        display: flex;
-        margin-bottom: 1.5rem;
+      @media screen and (min-width: 878px) {
+        .grid-item:nth-child(5) {
+          grid-column: 1/ -1;
+        }
       }
 
-      .grid-item__author-image {
-        width: 2.8rem;
-        height: 2.8rem;
-        border-radius: 50%;
+      @media screen and (min-width: 1045px) {
+        main {
+          max-width: 1045px;
+        }
+        .grid-item:nth-child(4) {
+          grid-column: auto/ span 2;
+        }
+
+        .grid-item:nth-child(5) {
+          grid-column: auto/ span 3;
+        }
       }
 
-      .grid-item__author-text {
-        margin-left: 1.5rem;
+      @media screen and (min-width: 1440px) {
+        body {
+          width: 100vw;
+          height: 100vh;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+        }
+
+        main {
+          width: 80%;
+          max-width: 1152px;
+        }
+
+        .grid-item:nth-child(1) {
+          grid-column: auto / span 2;
+        }
+
+        .grid-item:nth-child(2) {
+          grid-column: auto/ span 1;
+        }
+
+        .grid-item:nth-child(5) {
+          grid-column: 4 / span 1;
+          grid-row: 1/3;
+        }
       }
 
       .grid-item {
-        padding: 3rem 3rem 3.5rem 3rem;
+        padding: 2em 3em 3em 3em;
         border-radius: 1em;
+        font-size: 1.3rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
       }
 
       .grid-item--bg-purple {
@@ -126,6 +168,28 @@
       .grid-item--bg-black-blue {
         background-color: hsl(219, 29%, 14%);
         color: hsl(0, 0%, 100%);
+      }
+
+      .grid-item__quote-img {
+        position: absolute;
+        right: 8%;
+        top: 0;
+        z-index: 0;
+      }
+
+      .grid-item__author {
+        display: flex;
+        margin-bottom: 1.5rem;
+      }
+
+      .grid-item__author-image {
+        width: 2.8rem;
+        height: 2.8rem;
+        border-radius: 50%;
+      }
+
+      .grid-item__author-text {
+        margin-left: 1.5rem;
       }
 
       .attribution {
